--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
 server/node_modules/
 client/node_modules/
-server/config/default.json
-server/config/production.json
-server/vercel
+server/vercel.json
 server/.env
