--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@redux-devtools/extension": "^3.3.0",
     "axios": "^1.6.2",
     "dayjs": "^1.11.10",
+    "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-lazy-load-image-component": "^1.6.0",
